# crp

./: CRP.md  NOTICE  README.md  crp.py  pyproject.toml  test_crp.py
.github/workflows/: ci.yml
crp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
